<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_engine_use_book_summary">Use opening book</string>
    <string name="settings_engine_use_book_title">Use opening book</string>
    <string name="gameover_choices_options">Change Settings</string>
    <string name="settings_engine_practice_mode_summary">Show evaluations on the board</string>
    <string name="settings_engine_practice_mode_title">Practice Mode</string>
    <string name="settings_engine_human_openings_summary">Play human-style openings</string>
    <string name="settings_engine_human_openings_title">Human openings</string>
    <string name="settings_engine_force_opening_summary">Set forced opening name</string>
    <string name="settings_engine_force_opening_title">Forced Opening</string>
    <string name="settings_engine_randomness_dialog_message">Allow AI to consider non-optimal moves. This will result in
        weaker but more varied gameplay - more like human.
    </string>
    <string name="settings_engine_randomness_summary">Allow AI to make non-optimal moves</string>
    <string name="settings_engine_randomness_title">Randomness</string>
    <string name="spash_layout_message">Reversatile is loading</string>
    <string name="settings_engine_auto_make_moves_summary">Make forced moves automatically</string>
    <string name="settings_engine_auto_make_moves_title">Auto forced moves</string>
    <string name="settings_ui_display_last_move_summary">Mark last move on the board</string>
    <string name="settings_ui_display_last_move_title">Mark last move</string>
    <string name="settings_ui_display_moves_summary">Mark valid moves on the board</string>
    <string name="settings_ui_display_moves_title">View moves</string>
    <string name="gameover_choices_cancel">View Board</string>
    <string name="gameover_choices_switch">Switch Sides</string>
    <string name="gameover_choices_new_game">New Game</string>
    <string name="gameover_choices_email">e-Mail</string>
    <string name="settings_ui_display_pv_summary">Display sequence of moves that is the most advantageous to the current
        player (computed at the lookahead setting)
    </string>
    <string name="settings_ui_display_pv_title">Display principal variation</string>
    <string name="settings_ui_display_enable_animations_summary">Enable animation effects during move transitions, etc
    </string>
    <string name="settings_ui_display_enable_animations_title">Enable animations</string>
    <string name="settings_ui_preferences">User Interface</string>
    <string name="settings_engine_function_summary">Select which side computer plays</string>
    <string name="settings_engine_function_title">Engine Function</string>
    <string name="settings_engine_function_dialog_title">Select Engine Function</string>
    <string name="settings_sendmail_title">e-mail Address</string>
    <string name="settings_sendmail_summary">Default e-mail address for sending game transcripts</string>
    <string name="setting_strength_preference_summary">Engine strength: number of moves computer will analyze while
        playing
    </string>
    <string name="settings_strength_preference_title">Search Depth</string>
    <string name="settings_strength_dialog_title">Choose One</string>
    <string name="app_name">Reversatile</string>

    <string name="settings_engine_preferences">Engine Preferences</string>

    <string name="gameover_text_white_wins">White wins</string>
    <string name="gameover_text_black_wins">Black wins</string>
    <string name="gameover_text_draw">Draw</string>
    <string name="menu_item_new_game">New Game</string>
    <string name="menu_item_switch_sides">Switch Sides</string>
    <string name="menu_item_redo">Redo</string>
    <string name="menu_item_undo">Undo</string>
    <string name="menu_item_quit">Quit</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_enter_moves">Enter Moves</string>
    <string name="menu_item_hint">Hint</string>
    <string name="gameover_title">Game Over</string>
    <string name="dialog_quit_title">Are you sure?</string>
    <string name="dialog_quit_button_quit">Quit</string>
    <string name="dialog_quit_button_cancel">Cancel</string>
    <string name="dialog_busy_message">Cancel</string>
    <string name="dialog_pass_text">You have to pass</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="menu_item_mail">e-Mail</string>
    <string name="spash_layout_message_2">(this may take a few moments)</string>
    <string name="display_depth">Mid: %1$d Exact: %2$d W/L: %3$d</string>
    <string name="settings_title">Settings</string>
    <string name="mail_generated">Generated by Reversatile
        (https://play.google.com/store/apps/details?id=de.earthlingz.oerszebra)
    </string>
    <string name="mail_date">Date:</string>
    <string name="mail_move">Move sequence:</string>
    <string name="somebody_wins"></string>
    <string name="_00_00"></string>
    <string name="menu_item_guess_move">Guess Move Mode</string>
    <string name="guess_best_title">Guess Best Move</string>
    <string name="guess_black_move_hint">Guess best black move.</string>
    <string name="guess_white_move_hint">Guess best white move.</string>
    <string name="guess_move_correct">Correct!</string>
    <string name="guess_move_incorrect">Not the best move, try again</string>
    <string name="gameover_choices_rotate">Rotate the Board</string>
    <string name="menu_item_first_move">Replay</string>
    <string name="gameover_beginning">Go to first Move</string>
    <string name="board_description">The Board</string>
    <string name="ask.analytics">Analytics</string>
    <string name="ask_analytics_accept">Accept</string>
    <string name="ask_analytics_deny">Deny</string>
    <string name="ask.analytics.help">To improve the app I need some anonymous usage statistics and error logs Please allow the collection and transmision of these statistics. The app uses Google Analytics for Firebase and Firebase Crashlytics. DeviceIds and Ad-Ids are not transmitted. You can change your this in the settings later.</string>
</resources>
