<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/menu_hint" 
            android:icon="@android:drawable/ic_menu_compass" 
            android:title="@string/menu_item_hint">
        </item>
        <item android:id="@+id/menu_take_back"
              android:title="@string/menu_item_undo"
              tools:ignore="AppCompatResource">
        </item>
        <item android:id="@+id/menu_take_redo"
              android:title="@string/menu_item_redo"
              tools:ignore="AppCompatResource">
        </item>
    <item android:id="@+id/menu_goto_beginning"
        android:title="@string/menu_item_first_move"
        tools:ignore="AppCompatResource">
    </item>
    <item android:id="@+id/menu_rotate"
        android:title="@string/gameover_choices_rotate">
    </item>
        <item android:id="@+id/menu_new_game"
              app:showAsAction="ifRoom|withText"
              android:title="@string/menu_item_new_game"
              tools:ignore="AppCompatResource">
        </item>
        <item android:id="@+id/menu_settings"
            android:title="@string/menu_item_settings">
        </item>
        <item android:id="@+id/menu_switch_sides"
            android:title="@string/menu_item_switch_sides">
        </item>
        <item android:title="@string/menu_enter_moves"
            android:id="@+id/menu_enter_moves" />
        <item android:id="@+id/menu_mail"
            android:title="@string/menu_item_mail">
        </item>
        <item android:id="@+id/menu_guess_move"
            android:title="@string/menu_item_guess_move">
        </item>
        <item android:id="@+id/menu_quit"
            android:title="@string/menu_item_quit">
        </item>
     </menu>
