<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameover_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/gameover_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/somebody_wins"
        android:textColor="#FFF"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/gameover_score"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15sp"
        android:paddingBottom="20sp"
        android:text="@string/_00_00"
        android:textColor="#FFF"
        android:textSize="36sp" />

    <Button
        android:id="@+id/gameover_choice_new_game"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameover_choices_new_game"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/gameover_choice_beginning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameover_beginning"
        android:textSize="24sp" />

    <Button
        android:id="@+id/gameover_choice_rotate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameover_choices_rotate"
        android:textSize="24sp" />

    <Button
        android:id="@+id/gameover_choice_switch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameover_choices_switch"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/gameover_choice_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameover_choices_options"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/gameover_choice_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameover_choices_email"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/gameover_choice_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gameover_choices_cancel"
        android:textSize="24sp"/>


</LinearLayout>