<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_hint"
          android:icon="@android:drawable/ic_menu_compass"
          android:title="@string/menu_item_hint">
    </item>
    <item android:id="@+id/menu_take_back"
          android:icon="@drawable/ic_menu_undo"
          android:title="@string/menu_item_undo"
          app:showAsAction="always|withText"
          tools:ignore="AppCompatResource">
    </item>
    <item android:id="@+id/menu_take_redo"
          android:icon="@drawable/ic_menu_redo"
          android:title="@string/menu_item_redo"
          app:showAsAction="always|withText"
          tools:ignore="AppCompatResource">
    </item>
    <item android:id="@+id/menu_new_game"
          android:icon="@drawable/ic_menu_play"
          app:showAsAction="always|withText"
          android:title="@string/menu_item_new_game"
          tools:ignore="AppCompatResource">
    </item>
    <item android:id="@+id/menu_settings"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/menu_item_settings">
    </item>
</menu>
